fix margin-bottom for gallery block on mobiles

--- a/src/stylus/blocks/_about-company.styl
+++ b/src/stylus/blocks/_about-company.styl
@@ -81,6 +81,8 @@
 
 @media (max-width:1000px)
   .company
+    &__gallery
+      margin-bottom 10rem
     &__presentation
       &_image
         max-width 8rem
@@ -109,6 +111,8 @@
 @media (max-width:667px)
   .company
     padding 5rem 0 12rem
+    &__gallery
+      margin-bottom 8rem
     &__presentation
       &_image
         max-width 4.4rem
